# ns_fps

./: README.md  example.py  semantickitti_example.py  setup.py  test.py
eval/: README.md
eval/cpu/: CMakeLists.txt  compare_cpu_test_kitti.cpp  yuezu_fps.h
eval/gpu/: test_gpu.cpp  yuezu_fps_gpu.cu  yuezu_fps_gpu_optimized.cu
eval/kitti_data/: downsample.cpp
eval/src_cpu/: compare_cpu_test.cpp  test_cpu.cpp  yuezu_fps.cpp
eval/src_gpu/: CMakeLists.txt  compare_test.cpp  compare_test_kitti.cpp  yuezu_fps_gpu.h
hardware/: README.md
src/: yuezu_fps.cpp  yuezu_fps.h
yuezu_fps/: yuezu_fps_pybind.cpp
yuezu_fps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
